--- a/src/main/resources/templates/reset-password.html
+++ b/src/main/resources/templates/reset-password.html
@@ -3,20 +3,22 @@
 
 <head>
     <title>Activation Email</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 </head>
 
 <body style="margin: 0; padding: 0; min-width: 100%; font-family: Arial, sans-serif;
 font-size: 16px; line-height: 1.5; background-color: #FAFAFA; color: #222222;">
-    <div style="font-family: Helvetica,Arial,sans-serif;min-width:1000px;overflow:auto;line-height:2">
-        <div style="margin:50px auto;width:70%;padding:20px 0">
-            <p style="font-size:1.1em">Hi <span th:text="${name}"></span>,</p>
-            <p>There was a request to change your password! Use the following OTP to reset your password. OTP is valid for 5 minutes</p>
-            <h2 style="background: #00466a;margin: 0 auto;width: max-content;padding: 0 10px;color: #fff;border-radius: 4px;" th:text="${otp}">
-            </h2>
-        </div>
+<div style="font-family: Helvetica,Arial,sans-serif;min-width:1000px;overflow:auto;line-height:2">
+    <div style="margin:50px auto;width:70%;padding:20px 0">
+        <p style="font-size:1.1em">Hi <span th:text="${name}"></span>,</p>
+        <p>There was a request to change your password! Use the following OTP to reset your password. OTP is valid for 5
+            minutes</p>
+        <h2 style="background: #00466a;margin: 0 auto;width: max-content;padding: 0 10px;color: #fff;border-radius: 4px;"
+            th:text="${otp}">
+        </h2>
     </div>
+</div>
 </body>
 
 </html>
